strings: updated to reflect hints

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="div">/</string>
     <string name="perc">%</string>
     <string name="root">\u221a</string>
+    <string name="result">RESULT</string>
 </resources>
